fix: jpg 파일 다운로드로 변경

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <div class="temp-wrap">
         <div class="input-wrap">
           <label for="lowTemp">Lowest Temperature</label>
-          <input type="text" id="lowTemp" />
+          <input type="text" id="lowTemp" placeholder="0" />
         </div>
         <div class="input-wrap">
           <label for="highTemp">Highest Temperature</label>
-          <input type="text" id="highTemp" />
+          <input type="text" id="highTemp" placeholder="0" />
         </div>
       </div>
       <div class="input-wrap url-wrap">
@@ -98,7 +98,7 @@
       </div>
     </div>
     <div class="btn-wrap">
-      <button id="submitButton" class="btn">이미지 변환</button>
+      <button id="submitButton" class="btn btn-dark">이미지 변환</button>
     </div>
     <div class="result-wrap">
       <div id="imageContainer"></div>
