--- a/index.html
+++ b/index.html
@@ -243,11 +243,7 @@
               <input type="text" id="city" placeholder="서울" maxlength="20" />
             </div>
           </div>
-          <div id="selectedImage"
-            onmousedown="handleMouseDown()"
-            onmousemove="handleMouseMove(this)"
-            onmouseup="handleMouseUp()"
-          >
+          <div id="selectedImage">
             <div class="selectedImagePosition">
               <span id="selectedImagePosition"></span>
               <span id="selectedImagePositionReset" onclick="resetPosition()">↻ Reset</span></span>
