fix: 서브타이틀 디자인 수정

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="#" onclick="alert('Coming soon')">About</a>
               </li>
               <li>
-                <a href="#" onclick="alert('Coming soon')">Contact</a>
+                <a href="#" onclick="alert('clowncdi85@gmail.com')">Contact</a>
               </li>
             </ul>
           </div>
@@ -43,6 +43,7 @@
       <div class="main-container">
         <div class="item-wrap">
           <div class="item-title">
+            <span># 1</span>
             <h2>Today Weather</h2>
           </div>
           <div>
