feat: favicon 추가

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Plus Typo" />
+    <meta name="author" content="dalichoi" />
+    <link rel="icon" type="image/png" href="./images/favicon.png" />
     <link rel="stylesheet" href="./common.css" />
     <link rel="stylesheet" href="./temp.css" />
     <title>Plus Typo</title>
