feat: 정사각 이미지 첨부시 위치값 수정, 샘플이미지 추가 등 기타수정

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
           <div class="item-title">
             <span># 1</span>
             <h2>Today Weather</h2>
+            <div class="sample">
+              <p>Sample Output</p>
+              <img src="./images/app1_sample.webp" alt="Today Weather Sample Image" width="100%" />
+            </div>
           </div>
           <div>
             <div class="temp-image">
@@ -274,7 +278,7 @@
           </div>
           <div class="temp-result">
             <div class="result-wrap">
-              <div id="imageContainer"></div>
+              <div id="imageContainer"><i></i></div>
               <div id="download"></div>
             </div>
           </div>
@@ -289,6 +293,6 @@
     </div>
   </body>
 
-  <script src="./app.js" defer></script>
+  <script src="./app1.js" defer></script>
   <script src="./logo.js" defer></script>
 </html>
