feat: app2 템플릿에 컬러 피커 추가

--- a/index.html
+++ b/index.html
@@ -309,6 +309,10 @@
                 <input type="text" name="app2-title" id="app2Title" placeholder="yellow city" maxlength="20" />
                 <button class="clearBtn" onclick="clearInput(this)">X</button>
               </div>
+              <div class="input-wrap color">
+                <label for="app2-title-color">Color Picker</label>
+                <input type="color" name="app2-title-color" id="app2TitleColor" value="#EDF44F" />
+              </div>
               <div class="file-wrap">
                 <label for="chooseFileApp2" class="btn">Choose File</label>
                 <input type="file" name="chooseFileApp2" id="chooseFileApp2" accept="image/*" />
