feat: 800px 이하 반응형 css 적용

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./common.css" />
     <link rel="stylesheet" href="./app1.css" />
     <link rel="stylesheet" href="./sub.css" />
+    <link rel="stylesheet" media="screen and (max-width: 800px)" href="./w800.css" />
     <title>Plus Typo</title>
   </head>
   <body>
@@ -55,7 +56,7 @@
               <img src="./images/app1_sample.webp" alt="Today Weather Sample Image" width="100%" />
             </div>
           </div>
-          <div id="app1">
+          <div id="app1" class="app-wrap">
             <div class="item-image">
               <div class="temp-wrap">
                 <div class="input-wrap">
@@ -302,7 +303,7 @@
               <img src="./images/app2_sample.webp" alt="Yellow city Sample Image" width="100%" />
             </div>
           </div>
-          <div id="app2">
+          <div id="app2" class="app-wrap">
             <div class="item-image">
               <div class="input-wrap">
                 <label for="app2-title">yellow city</label>
