fix: 파일타입별 디렉토리 분리, 블러 사파리용 프리픽스 추가

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="description" content="Plus Typo" />
     <meta name="author" content="dalichoi" />
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./common.css" />
-    <link rel="stylesheet" href="./app1.css" />
-    <link rel="stylesheet" href="./sub.css" />
-    <link rel="stylesheet" media="screen and (max-width: 800px)" href="./w800.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/app1.css" />
+    <link rel="stylesheet" href="./css/sub.css" />
+    <link rel="stylesheet" media="screen and (max-width: 800px)" href="./css/w800.css" />
     <title>Plus Typo</title>
   </head>
   <body>
@@ -345,8 +345,8 @@
     </div>
   </body>
 
-  <script src="./common.js" defer></script>
-  <script src="./app1.js" defer></script>
-  <script src="./app2.js" defer></script>
-  <script src="./logo.js" defer></script>
+  <script src="./js/common.js" defer></script>
+  <script src="./js/app1.js" defer></script>
+  <script src="./js/app2.js" defer></script>
+  <script src="./js/logo.js" defer></script>
 </html>
