fix: mobile touch 반영

--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
               <li>
                 <a href="#" onclick="alert('Coming soon')">About</a>
               </li>
-              <li>
-                <a href="#" onclick="alert('clowncdi85@gmail.com')">Contact</a>
-              </li>
             </ul>
           </div>
         </div>
@@ -341,6 +338,9 @@
       <!-- footer -->
       <footer>
         <p>Copyright © 2023 PlusTypo</p>
+        <address>
+          Made by <a href="mailto:clowncdi85@gmail.com">clowncdi85@gmail.com</a>
+        </address>
       </footer>
     </div>
   </body>
