feat: about 페이지 추가

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="gnb-menu">
             <ul>
               <li>
-                <a href="#" onclick="alert('Hello, Coming soon')">About</a>
+                <a href="./about.html">About</a>
               </li>
             </ul>
           </div>
