fix: footer 문구 교체

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
       <footer>
         <p>Copyright © 2023 PlusTypo</p>
         <address>
-          Made by <a href="mailto:clowncdi85@gmail.com">clowncdi85@gmail.com</a>
+          Send your feedback and creations to <a href="mailto:clowncdi85@gmail.com">clowncdi85@gmail.com</a>
         </address>
       </footer>
     </div>
