--- a/index.html
+++ b/index.html
@@ -648,7 +648,51 @@
           </div>
         </div>
 
-        <!-- app9 coming soon -->
+        <!-- app9 -->
+        <div class="item-wrap">
+          <div class="item-title">
+            <span># 9</span>
+            <h2>Spring</h2>
+            <div class="sample">
+              <p>Sample Output</p>
+              <img src="./images/app9_sample.webp" alt="Spring Sample Image" width="100%" />
+            </div>
+          </div>
+          <div id="app9" class="app-wrap">
+            <div class="item-image">
+              <div class="file-wrap">
+                <label for="chooseFileApp9" class="btn">Choose File</label>
+                <input type="file" name="chooseFileApp9" id="chooseFileApp9" accept="image/*" />
+              </div>
+              <div class="input-wrap color">
+                <label for="app9-title-color">Color Picker</label>
+                <input type="color" name="app9-title-color" id="app9TitleColor" value="#FFFFFF" />
+              </div>
+              <div class="input-wrap">
+                <label for="app9-title">Spring</label>
+                <input type="text" name="app9-title" id="app9Title" placeholder="Spring" maxlength="15" />
+                <button class="clearBtn" onclick="clearInput(this)">X</button>
+              </div>
+              <div class="selected-image" id="selectedImageApp9">
+                <div class="selected-image-position">
+                  <span></span>
+                  <span class="selected-image-position-reset" onclick="resetPosition(this, transEvent9, 'chooseImg9')">↻ Reset</span></span>
+                </div>
+              </div>
+            </div>
+            <div class="btn-wrap">
+              <button id="submitBtnApp9" class="btn btn-dark">Create</button>
+            </div>
+          </div>
+          <div class="item-result">
+            <div class="result-wrap">
+              <div class="image-container" id="imageContainerApp9"><i class="result-temp-bg"></i></div>
+              <div class="download"></div>
+            </div>
+          </div>
+        </div>
+
+        <!-- app10 coming soon -->
 
       </div>
 
@@ -672,5 +716,6 @@
   <script src="./js/app6.js" defer></script>
   <script src="./js/app7.js" defer></script>
   <script src="./js/app8.js" defer></script>
+  <script src="./js/app9.js" defer></script>
   <script src="./js/logo.js" defer></script>
 </html>
